--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul><a href="#Home">Home</a></ul>
+		<ul><a href="#About us">About us</a></ul>
+		<ul><a href="#Contact us">Contact us</a></ul>
+	</nav>
+	<h1>3 random images</h1>
+	<img src="https://picsum.photos/id/123/200/300" alt="picsumphoto">
+	<img src="https://picsum.photos/id/124/200/300" alt="picsumphoto">
+	<img src="https://picsum.photos/id/125/200/300" alt="picsumphoto">
     <script type="text/javascript" src="./script.js">
 </script>
 
